# sprd

./: .gitignore  LICENSE  README.md  bootstrap  configure.ac
scripts/: install.sh
src/: Makefile  Makefile.am  chunks.cpp  chunks.hpp  config.hpp  display.c  display.h  file.cpp  file.hpp  new.txt  sleep.c  sleep.h  sprd.c  sprd.cpp  spritz.cpp  spritz.hpp  wpm.cpp  wpm.hpp
